--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tower-http = { version = "0.6", features = ["fs", "cors"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 anyhow = "1"
+dotenvy = "0.15"
